--- a/SCSS/libs/variables.scss
+++ b/SCSS/libs/variables.scss
@@ -3,6 +3,7 @@ $secondarygrey: #f6f6f6;
 $green: #99e2d0;
 $darkgrey: #353535;
 $wcolor: white;
+$bcolor: black;
 $radiant: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
 $fontprimary: "Roboto", sans-serif;
 $fontsecondary: "Shrikhand", cursive;
@@ -10,3 +11,4 @@ $p32: 32px;
 $p16: 16px;
 $p48: 48px;
 $p25: 25px;
+$bottom: margin-bottom
