--- a/SCSS/libs/variables.scss
+++ b/SCSS/libs/variables.scss
@@ -11,4 +11,8 @@ $p32: 32px;
 $p16: 16px;
 $p48: 48px;
 $p25: 25px;
-$bottom: margin-bottom
+$bottom: margin-bottom;
+$mob: 768px;
+$tab: 992px;
+$desk: 1024px;
+
