responsive hover violet et vignette nouveau et fleche retour

--- a/SCSS/libs/variables.scss
+++ b/SCSS/libs/variables.scss
@@ -4,6 +4,7 @@ $green: #99e2d0;
 $darkgrey: #353535;
 $wcolor: white;
 $bcolor: black;
+$violet: rgba(147, 86, 220, 0.1);
 $radiant: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
 $fontprimary: "Roboto", sans-serif;
 $fontsecondary: "Shrikhand", cursive;
