--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,8 +31,8 @@ main .city {
 @media (max-width: 768px) {
   main .city {
     padding: 0;
-    margin-top: -14px;
-    margin-bottom: -20px;
+    margin-top: -15px;
+    margin-bottom: -2px;
     height: 40px;
     font-size: 10px;
   }
@@ -125,9 +125,6 @@ i {
 .cartes i {
   padding-left: 20px;
 }
-.cartes:hover {
-  background-color: #eaeaea;
-}
 .cartes .choice {
   background-color: #f6f6f6;
   border-radius: 16px 16px 16px 16px;
@@ -138,6 +135,9 @@ i {
   justify-content: center;
   align-items: center;
   position: relative;
+}
+.cartes .choice:hover {
+  background-color: rgba(147, 86, 220, 0.1);
 }
 @media (max-width: 768px) {
   .cartes .choice {
@@ -179,6 +179,9 @@ i {
   align-items: center;
   position: relative;
 }
+.cartes .compose:hover {
+  background-color: rgba(147, 86, 220, 0.1);
+}
 @media (max-width: 768px) {
   .cartes .compose {
     width: 100%;
@@ -214,6 +217,9 @@ i {
   justify-content: center;
   align-items: center;
   position: relative;
+}
+.cartes .eat:hover {
+  background-color: rgba(147, 86, 220, 0.1);
 }
 @media (max-width: 768px) {
   .cartes .eat {
@@ -255,6 +261,17 @@ i {
   .menus h2 {
     padding-left: 20px;
   }
+}
+.menus .promo {
+  position: absolute;
+  top: 8px;
+  right: 13px;
+  width: 70px;
+  padding: 5px;
+  color: #0c6b50;
+  background: #99E2D0;
+  border-radius: 3px;
+  text-align: center;
 }
 .menus .restaurants-card {
   background-color: white;
@@ -314,6 +331,11 @@ i {
   margin-left: 32px;
   margin-bottom: 32px;
 }
+@media (max-width: 768px) {
+  .restaurants-content p {
+    margin-left: 20px;
+  }
+}
 .restaurants-content .fa-heart {
   color: black;
   right: 16px;
@@ -361,6 +383,7 @@ i {
   align-items: center;
   gap: 16px;
   padding: 0.1rem;
+  text-decoration: none;
 }
 @media (max-width: 768px) {
   .footer .ustensils {
@@ -376,6 +399,7 @@ i {
   align-items: center;
   gap: 16px;
   padding: 0.1rem;
+  text-decoration: none;
 }
 @media (max-width: 768px) {
   .footer .help {
@@ -395,6 +419,7 @@ i {
   justify-content: center;
   align-items: center;
   padding: 0.1rem;
+  text-decoration: none;
 }
 @media (max-width: 768px) {
   .footer .mentions {
@@ -409,6 +434,7 @@ i {
   align-items: center;
   gap: 16px;
   padding: 0.1rem;
+  text-decoration: none;
 }
 @media (max-width: 768px) {
   .footer .mail {
