--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -28,8 +28,8 @@ main .city {
   gap: $p16;
   @include mob {
     padding: 0;
-    margin-top: -14px;
-    margin-bottom: -20px;
+    margin-top: -15px;
+    margin-bottom: -2px;
     height: 40px;
     font-size: 10px;
     i {
@@ -101,19 +101,20 @@ i {
   }
   i {
     padding-left: $p16 + 4px;}
-  &:hover {
-    background-color: $primarygrey;
-  }
+
   .choice {
     @include fonctionnement;
     @include display;
     position: relative;
+    &:hover {
+        background-color: $violet;
+          }
     @include mob {
       width: 100%;
       margin-left: -20px;
       margin-bottom: $p16;
       height: 60px;
-    }
+      }
   i {
     @include mob {
       padding-left: 0;
@@ -131,6 +132,9 @@ i {
     @include fonctionnement;
     @include display;
     position: relative;
+    &:hover {
+        background-color: $violet;
+          }
      @include mob {
       width: 100%;
       margin-left: -20px;
@@ -151,6 +155,9 @@ i {
     @include fonctionnement;
     @include display;
     position: relative;
+    &:hover {
+        background-color: $violet;
+          }
      @include mob {
       width: 100%;
       margin-left: -20px;
@@ -179,6 +186,16 @@ i {
       padding-left: $p16 + 4px;
     }
   }
+  .promo {
+  position: absolute;
+  top: 8px;
+  right: 13px;
+  width: 70px;
+  padding: 5px;
+  color: #0c6b50;
+  background: #99E2D0;
+  border-radius: 3px;
+  text-align: center;}
 
   .restaurants-card {
     @include card;
@@ -222,6 +239,9 @@ i {
     margin-top: -$p16;
     margin-left: $p32;
     margin-bottom: $p32;
+    @include mob {
+      margin-left:$p16 + 4px; 
+    }
   }
   .fa-heart {
     @include color;
@@ -264,6 +284,7 @@ i {
   @include display;
   gap: $p16;
   padding: 0.1rem;
+  text-decoration:none;
   @include mob {
   margin-left: -3px;
   width: 100%;
@@ -274,6 +295,7 @@ i {
   @include display;
   gap: $p16;
   padding: 0.1rem;
+  text-decoration:none;
   @include mob {
   margin-left: -29px;
   gap: 9px;}
@@ -287,6 +309,7 @@ i {
   margin-left: $p16;
   @include display;
   padding: 0.1rem;
+  text-decoration:none;
   @include mob {
   margin-left: -64px;
     }
@@ -297,6 +320,7 @@ i {
   @include display;
   gap: 16px;
   padding: 0.1rem;
+  text-decoration:none;
   @include mob {
   margin-left: -111px;}
 }
