--- a/SCSS/menus.scss
+++ b/SCSS/menus.scss
@@ -15,7 +15,6 @@ body {
     }
 }
 
-
 header {
     font-family: $fontsecondary;
     text-align: center;
@@ -82,6 +81,7 @@ header {
         }
 } 
 .menu_carte {
+    cursor: pointer;
     border-radius: $p25;
     padding-left: $p16;
     margin-left: $p32;
@@ -94,7 +94,6 @@ header {
     &:h2 {
     padding: $p16;
     }
-    
     @include mob {
         margin-left: 20px;
         padding-left: 0px;
@@ -119,18 +118,48 @@ header {
    font-weight: bold;
    font-size: $p16;
     }
-    
-        .check {
+    }
+    .box {
+overflow: hidden;
+text-align: center;
+background: #99E2D0;
+border-radius: 0 $p25 $p25 0;
+-webkit-box-align: center;
+-ms-flex-align: center;
+align-items: center;
+height: 79px;
+-webkit-transition: width 2s;
+-o-transition: width 2s;
+transition: width 2s;
+animation-name: box;
+animation-duration: 2s;
+&:hover {
+    width: 0px;
+    @keyframes box {
+  0% {
+    width: 0px;
+  }
+  50% {
+    width: 75px;
+  }
+  100% {
+    width: 0px;
+  }
+}}
+    .check {
     background-color: $green;
     height: 79px;
-    width: 80px;
+    width: 0px;
     color: $wcolor;
     @include display;
     border-radius: 0 $p25 $p25 0;
     font-size: $p32;
-    transition: transform 500ms, -webkit-transform 500ms }
-}
-
+    animation-name: box;
+    animation-duration: 2s;
+    transform: rotate(360deg);
+    transition: transform 500ms, -webkit-transform 500ms;
+    }
+    
 
 .btn {
     font-size: $p32 - 2px;
@@ -175,7 +204,7 @@ header {
                     @include display;
                     font-size: $p32 - 7px;
                     margin-bottom: -0.1rem;
-                }
+                }}
 
                
             
