--- a/CSS/menus.css
+++ b/CSS/menus.css
@@ -50,24 +50,17 @@ img {
   font-size: 1.5rem;
   margin-left: 48px;
 }
-.menu .heart {
+.menu .fa-heart {
   color: black;
-  right: 16px;
+  right: 65px;
   top: 4%;
   transform: translateY(-80%);
   position: absolute;
   font-size: 1.5rem;
 }
-.menu .fas {
-  color: transparent;
-  background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-  background-clip: text;
-  webkit-background-clip: text;
-  opacity: 0;
-  transition: all 200ms;
-}
-.menu .fas:hover {
-  opacity: 1;
+.menu .fa-heart:hover {
+  color: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  transition-duration: 1s;
 }
 .menu .title {
   width: 95%;
@@ -175,7 +168,8 @@ img {
   transform: rotate(360deg);
   transition: transform 500ms, -webkit-transform 500ms;
 }
-.box .btn {
+
+.btn {
   font-size: 30px;
   background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
   border-radius: 32px 32px 32px 32px;
@@ -188,31 +182,96 @@ img {
   margin-bottom: 32px;
 }
 @media (max-width: 768px) {
-  .box .btn {
+  .btn {
     width: 40%;
     margin-left: 30%;
   }
 }
-.box .footer {
+
+.footer {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #353535;
 }
-.box .footer_container {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 32px;
+@media (max-width: 768px) {
+  .footer {
+    padding-right: 170px;
+    font-size: 12px;
+  }
 }
-.box .footer a {
+.footer .ustensils {
+  color: white;
+  margin-left: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  padding: 0.1rem;
+  text-decoration: none;
+}
+@media (max-width: 768px) {
+  .footer .ustensils {
+    margin-left: -3px;
+    width: 100%;
+  }
+}
+.footer .help {
+  color: white;
+  margin-left: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  padding: 0.1rem;
+  text-decoration: none;
+}
+@media (max-width: 768px) {
+  .footer .help {
+    margin-left: -29px;
+    gap: 9px;
+  }
+}
+@media (max-width: 768px) {
+  .footer .fas {
+    font-size: 16px;
+  }
+}
+.footer .mentions {
   color: white;
   margin-left: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0.1rem;
+  text-decoration: none;
 }
-.box .footer h3 {
+@media (max-width: 768px) {
+  .footer .mentions {
+    margin-left: -64px;
+  }
+}
+.footer .mail {
+  color: white;
+  margin-left: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  padding: 0.1rem;
+  text-decoration: none;
+}
+@media (max-width: 768px) {
+  .footer .mail {
+    margin-left: -111px;
+  }
+}
+.footer .footer_container {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 36px;
+}
+.footer h3 {
   font-family: "Shrikhand", cursive;
   text-align: center;
   position: relative;
@@ -223,6 +282,12 @@ img {
   align-items: center;
   font-size: 25px;
   margin-bottom: -0.1rem;
+}
+@media (max-width: 768px) {
+  .footer h3 {
+    margin-left: -50px;
+    font-size: 16px;
+  }
 }
 
 /*# sourceMappingURL=menus.css.map */
